# threeway-merge-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: audit.yml  build.yml  check.yml
assets/: banner.psd
examples/: base.txt  basic_usage.rs  git_result.txt  ours.txt  result.txt  theirs.txt
src/: ffi.rs  lib.rs  merge.rs  types.rs
temp/: ours.txt  ours2.txt
tests/: algorithm_test.rs  basic_merge.rs  comprehensive_git_comparison.rs  debug_test.rs  options_validation.rs  ours.txt
tests/scenarios/deeply_nested_conflict/: base.txt  ours.txt  theirs.txt
tests/scenarios/french_classic/: base.txt  ours.txt  theirs.txt
tests/scenarios/great_gatsby/: base.txt  ours.txt  theirs.txt
tests/scenarios/japanese_classic/: base.txt  ours.txt  theirs.txt
tests/scenarios/korean_spring/: base.txt  ours.txt  theirs.txt
tests/scenarios/moby_dick/: base.txt  ours.txt  theirs.txt
tests/scenarios/overlapping_changes/: base.txt  ours.txt  theirs.txt
tests/scenarios/pride_prejudice/: base.txt  ours.txt  theirs.txt
tests/scenarios/similar_lines_different_context/: base.txt  ours.txt  theirs.txt
tests/scenarios/us_constitution/: base.txt  ours.txt  theirs.txt
tests/scenarios/whitespace_nightmare/: base.txt  ours.txt  theirs.txt
xtask/src/: main.rs
