[package]
name = "threeway_merge"
version = "0.1.10"
description = "Git-style 3-way string merging using proven algorithms from libgit2/xdiff. Statically links xdiff (LGPL-2.1+)."
authors = [
    "Levi Lim <shiueo.csh@gmail.com>",
]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/levish0/threeway-merge-rs"
homepage = "https://github.com/levish0/threeway-merge-rs"
documentation = "https://docs.rs/threeway_merge"
readme = "README.md"
keywords = ["merge", "diff", "git", "text", "conflict"]
categories = ["text-processing", "algorithms", "development-tools"]
exclude = [
    "assets/",
    "examples/",
    "tests/scenarios/",
]

edition = "2024"
rust-version = "1.88.0"

[dependencies]
libc = "0.2.177"
thiserror = "2.0.17"

[build-dependencies]
cc = { version = "1.2.46", features = ["parallel"] }

[dev-dependencies]
tempfile = "3.23.0"

